--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   },
   "dependencies": {
     "expo": "~40.0.0",
-    "expo-constants": "~9.3.3",
-    "expo-keep-awake": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-web": "~0.13.12",
+    "expo-av": "~8.7.0",
+    "expo-font": "~8.4.0",
+    "expo-asset": "~8.2.1",
+    "expo-keep-awake": "~8.4.0",
     "react-native-paper": "3.6.0",
-    "react-native-web": "~0.13.12"
+    "@react-native-async-storage/async-storage": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
